--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,6 @@
   "theme_color": "#049372",
   "background_color": "#ffffff",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "prefer_related_applications": true,
 }
